# bitfloat

./: README.md  pyproject.toml
.github/workflows/: test.yml
bitfloat/: __init__.py  __main__.py
tests/: test_bitfloat.py
